--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+
 }
 
 .container {
@@ -107,6 +108,7 @@ nav ul li a {
 	margin-right: 15px;
 	margin-left: 15px;
 	padding: 50px;
+    background-color: white;
 }
 
 .card-img {
